--- a/src/components/CreateStudent/CreateStudent.css
+++ b/src/components/CreateStudent/CreateStudent.css
@@ -1,6 +1,18 @@
 .create-student{
-    background-color: lightslategrey;
-    border-radius:10px;
-    border:1px solid darkblue;
-    padding: 5px;
+  background-color: gray;
+  border-radius: 10px;
+  border: 2px solid #f39c12;
+  padding: 10px;
+}
+
+.create-student .error{
+  background-color: skyblue;
+  color: white;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.create-student h3{
+  display: inline-block;
+  border-bottom: 3px double black;
 }
